fix: aggrid checkbox sizing

--- a/packages/aggrid/scss/ix-aggrid.scss
+++ b/packages/aggrid/scss/ix-aggrid.scss
@@ -35,7 +35,9 @@
       clip: unset !important;
       clip-path: unset !important;
       height: inherit !important;
+      max-height: unset !important;
       width: inherit !important;
+      max-width: unset !important;
       overflow: inherit !important;
       position: inherit !important;
       white-space: inherit !important;
