--- a/packages/core/src/components/menu-category/menu-category.scss
+++ b/packages/core/src/components/menu-category/menu-category.scss
@@ -8,6 +8,7 @@
  */
 
 @import 'mixins/shadow-dom/component';
+@import 'mixins/text-truncation';
 
 :host {
   @include ix-component;
@@ -21,6 +22,13 @@
     align-items: center;
     width: 100%;
     height: 100%;
+  }
+
+  .category-text {
+    width: 100%;
+    height: 100%;
+    padding-right: 0.25rem;
+    @include ellipsis;
   }
 
   .category-chevron {
@@ -52,6 +60,7 @@
 
   .category-dropdown-header {
     pointer-events: none;
+    padding-left: 0.125rem;
     min-width: 256px;
   }
 
