fix(core/message-bar): aditional fixes

--- a/packages/core/src/components/message-bar/message-bar.scss
+++ b/packages/core/src/components/message-bar/message-bar.scss
@@ -50,7 +50,7 @@
     align-self: center;
     min-height: 1.25rem;
     padding: 0 $default-space;
-    font-weight: bold;
+    font-weight: normal;
     white-space: normal;
   }
 
