fix(core/menu-category): adaption

--- a/packages/core/src/components/message-bar/message-bar.scss
+++ b/packages/core/src/components/message-bar/message-bar.scss
@@ -13,6 +13,7 @@
 
 :host {
   @include ix-component;
+  margin: $small-space $small-space 0rem $small-space;
 
   .message-container {
     display: flex;
