--- a/packages/core/src/components/menu-category/menu-category.scss
+++ b/packages/core/src/components/menu-category/menu-category.scss
@@ -32,7 +32,7 @@
 
   .category-chevron {
     margin-left: auto;
-    margin-right: 0px;
+    margin-right: 0;
     transition: var(--theme-default-time) transform ease-in-out;
   }
 
@@ -42,13 +42,13 @@
 
   .menu-items {
     overflow: hidden;
-    max-height: 0px;
+    max-height: 0;
     transition: var(--theme-default-time) max-height ease-in-out;
-    padding: 0.25rem 0 0.25rem 1.625rem;
   }
 
   .menu-items--expanded {
     max-height: 999999999px;
+    padding: 0.25rem 0 0.25rem 1.625rem;
   }
 
   .menu-items--collapsed {
