--- a/packages/core/src/components/menu-avatar-item/menu-avatar-item.scss
+++ b/packages/core/src/components/menu-avatar-item/menu-avatar-item.scss
@@ -11,5 +11,5 @@
 :host {
   @include ix-component;
   display: block;
-  color: var(--theme-nav-item-primary--color);
+  color: var(--theme-color-std-text);
 }
