--- a/packages/core/src/components/modal-content/modal-content.scss
+++ b/packages/core/src/components/modal-content/modal-content.scss
@@ -14,5 +14,5 @@
   display: block;
   position: relative;
   overflow: auto;
-  padding: 0.125rem 0.625rem 0.125rem 0.625rem;
+  padding: .25rem .75rem .25rem .75rem;
 }
