fix(core/modal): adapt changes

--- a/packages/core/src/components/modal-content/modal-content.scss
+++ b/packages/core/src/components/modal-content/modal-content.scss
@@ -14,5 +14,5 @@
   display: block;
   position: relative;
   overflow: auto;
-  padding: .25rem .75rem .25rem .75rem;
+  padding: 0.25rem 0.75rem;
 }
