--- a/packages/core/src/components/modal-footer/modal-footer.scss
+++ b/packages/core/src/components/modal-footer/modal-footer.scss
@@ -11,7 +11,7 @@
 :host {
   @include ix-component;
   display: flex;
-  padding: .5rem;
+  padding: 0.5rem;
   justify-content: flex-end;
   align-items: center;
   gap: 0.5rem;
