fix(core/menu): added test, adapt naming

--- a/packages/core/src/components/menu/menu.scss
+++ b/packages/core/src/components/menu/menu.scss
@@ -42,7 +42,7 @@ $menu-expanded-width: 16rem;
     }
   }
 
-  .scrollbar {
+  .show-scrollbar {
     scrollbar-width: inherit;
 
     &::-webkit-scrollbar {
