fix(core/menu-avatar): add color property to name

--- a/packages/core/src/components/menu-avatar/menu-avatar.scss
+++ b/packages/core/src/components/menu-avatar/menu-avatar.scss
@@ -42,6 +42,7 @@
       line-height: 1.14;
 
       .text-default-single {
+        color: var(--theme-nav-item-primary--color);
         @include ellipsis;
       }
     }
