--- a/packages/core/src/components/avatar/avatar.scss
+++ b/packages/core/src/components/avatar/avatar.scss
@@ -39,7 +39,7 @@
       min-width: 2rem;
       border-radius: 100px;
       background-color: var(--theme-color-component-3);
-      color: var(--theme-color-std-text);
+      color: var(--theme-avatar--color);
     }
 
     #avatar-path-background {
