--- a/packages/react-test-app/src/preview-examples/styles-auto-gen/workflow.css
+++ b/packages/react-test-app/src/preview-examples/styles-auto-gen/workflow.css
@@ -7,10 +7,6 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-import { Component } from '@angular/core';
-
-@Component({
-  selector: 'app-example',
-  template: `<ix-date-dropdown></ix-date-dropdown>`,
-})
-export default class DateDropdownUserRange {}
+body {
+  overflow-x: scroll;
+}
