fix(core/menu): adapted paddings

--- a/packages/core/src/components/menu/menu.scss
+++ b/packages/core/src/components/menu/menu.scss
@@ -175,6 +175,10 @@ $menu-expanded-width: 16rem;
     width: 0;
   }
 
+  .show-scrollbar {
+    padding-top: 0.5rem;
+  }
+
   .menu .burger-menu {
     display: none;
   }
