fix: make pages uniform and change some global example and page styles

--- a/packages/angular-test-app/src/preview-examples/styles-auto-gen/global.css
+++ b/packages/angular-test-app/src/preview-examples/styles-auto-gen/global.css
@@ -20,6 +20,11 @@ html {
   overflow: hidden;
 }
 
+#root {
+  height: 100vh;
+  width: 100vw;
+}
+
 /* placeholder-logo for usage in all files */
 .placeholder-logo {
   float: left;
