fix(core/menu): update margin

--- a/packages/core/src/components/menu/menu.scss
+++ b/packages/core/src/components/menu/menu.scss
@@ -54,7 +54,7 @@ $menu-expanded-width: 16rem;
     overflow: hidden;
     display: block;
     position: relative;
-    margin-bottom: .75rem;
+    margin-bottom: 0.75rem;
   }
 
   .tabs--shadow {
@@ -176,7 +176,7 @@ $menu-expanded-width: 16rem;
   }
 
   .show-scrollbar {
-    padding-top: 0.5rem;
+    padding-top: 0.75rem;
   }
 
   .menu .burger-menu {
