--- a/packages/core/src/components/input-group/input-group.scss
+++ b/packages/core/src/components/input-group/input-group.scss
@@ -7,6 +7,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 @import 'mixins/shadow-dom/component';
+@import 'mixins/shadow-dom/host-disabled';
 
 :host {
   @include ix-component;
@@ -34,11 +35,20 @@
   .group-end {
     right: 0px;
     height: 2rem;
-    margin-right: 0.375rem;
+    margin-right: 0.5rem;
     color: var(--theme-color-soft-text);
   }
 
   ::slotted(*) {
     display: flex;
+  }
+}
+
+@include host-disabled {
+  .group-start,
+  .group-end {
+    ::slotted(*) {
+      opacity: 0.4 !important;
+    }
   }
 }
