--- a/packages/documentation/src/css/custom.scss
+++ b/packages/documentation/src/css/custom.scss
@@ -170,7 +170,10 @@ aside {
 }
 
 .dropdown__link {
+  display: inline-flex;
+  align-items: center;
   text-decoration: auto;
+  width: 100%;
 }
 
 .menu__link {
