--- a/packages/core/src/components/toggle/toggle.scss
+++ b/packages/core/src/components/toggle/toggle.scss
@@ -52,8 +52,8 @@
   .slider:before {
     position: absolute;
     content: '';
-    height: 18px;
-    width: 18px;
+    height: 1.125rem;
+    width: 1.125rem;
     left: 4px;
     bottom: 3px;
     background-color: var(--theme-switch-thumb-off--background);
