--- a/packages/core/src/components/blind/blind.scss
+++ b/packages/core/src/components/blind/blind.scss
@@ -131,7 +131,14 @@
   }
 
   .blind-header-title-row {
+    display: flex;
     width: calc(100% - 4rem);
+  }
+
+  .blind-header-title-col {
+    display: inline-flex;
+    align-items: center;
+    width: calc(100% - 1rem);
   }
 
   .blind-header-title-col:not(:first-of-type) {
