--- a/packages/core/src/components/blind/blind.scss
+++ b/packages/core/src/components/blind/blind.scss
@@ -71,9 +71,7 @@
   overflow: hidden;
 
   .blind-header-wrapper {
-    display: block;
     position: relative;
-    width: 100%;
     min-height: 3rem;
     height: 3rem;
     overflow: hidden;
@@ -97,8 +95,7 @@
     position: relative;
     align-items: center;
     flex-grow: 1;
-    flex-shrink: 0;
-    margin-right: 1rem;
+    margin-right: 0.5rem;
   }
 
   .blind-header {
@@ -135,15 +132,15 @@
 
   .blind-header-title-row {
     display: flex;
-    flex-grow: 1;
+    width: 100%;
+    overflow: hidden;
   }
 
   .blind-header-title-col {
-    flex-grow: 1;
-    flex-basis: 0;
     display: inline-flex;
     align-items: center;
-    min-width: 0;
+    width: calc(100% - 1rem);
+    overflow: hidden;
   }
 
   .blind-header-title-col:not(:first-of-type) {
@@ -194,6 +191,7 @@
 
   .header-actions {
     pointer-events: all;
+    margin-left: auto;
   }
 }
 
