refactor(core): use custom properties for css transition times

--- a/packages/core/src/components/menu/burger-menu.scss
+++ b/packages/core/src/components/menu/burger-menu.scss
@@ -33,7 +33,7 @@ $focus-bdr-width: 0.0625rem;
     fill: var(--theme-menu-btn--color);
     opacity: 1;
     x: 2px;
-    transition: x 0.075s ease-in 0.15s, transform 0.075s ease-in-out 0.075s,
+    transition: x 0.075s ease-in var(--theme-default-time), transform 0.075s ease-in-out 0.075s,
       y 0.075s ease-in-out, opacity 0.075s linear 0.075s;
     transform-origin: center;
   }
