--- a/packages/core/src/components/menu/menu.scss
+++ b/packages/core/src/components/menu/menu.scss
@@ -97,7 +97,7 @@ $menu-expanded-width: 16rem;
     }
 
     background-color: var(--theme-nav--background);
-    transition: width var(--animate-duration) ease-in-out;
+    transition: width var(--theme-default-time) ease-in-out;
   }
 
   .menu-overlay {
@@ -109,7 +109,7 @@ $menu-expanded-width: 16rem;
     z-index: -1;
     backdrop-filter: blur(1rem);
     background-color: var(--theme-sidebar-overlay-blur);
-    transition: left var(--animate-duration) ease-in-out;
+    transition: left var(--theme-default-time) ease-in-out;
   }
 
   .menu-overlay.visible {
