fix(core/workflow): add flexible layout

--- a/packages/core/src/components/workflow-step/workflow-step.scss
+++ b/packages/core/src/components/workflow-step/workflow-step.scss
@@ -10,8 +10,19 @@
 @import 'common-variables';
 @import 'mixins/shadow-dom/component';
 
+:host(:not(.host-vertical)) {
+  min-width: 2rem;
+  min-height: 4rem;
+}
+
+:host(.host-vertical) {
+  min-width: 4rem;
+  min-height: 2rem;
+}
+
 :host {
   @include ix-component;
+  flex: 1 1 0;
 
   .step {
     display: flex;
@@ -19,10 +30,7 @@
     align-items: center;
     background-color: var(--theme-workflow-step--background);
     border-radius: var(--theme-workflow--border-radius);
-    width: auto;
     padding: 1.125rem 0 $small-space 0;
-    height: 4rem;
-    width: 12.75rem;
 
     .wrapper {
       display: flex;
@@ -93,18 +101,24 @@
 
     .text {
       margin-top: $default-space;
-      width: auto;
+      width: 100%;
       padding: 0 $small-space;
+
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      text-align: center;
     }
 
     &.vertical {
       flex-direction: row;
       padding: 0;
+      height: 100%;
 
       .wrapper {
         width: auto;
         padding-left: 1.125rem;
-        height: 4rem;
+        height: 100%;
 
         .line {
           width: 0.125rem;
@@ -130,6 +144,7 @@
         margin-top: 0;
         margin-left: $default-space;
         padding: 0;
+        width: auto;
       }
     }
 
