fix(group): made gruop-item cursor point and it also should be changed by user

--- a/packages/core/src/components/group-item/group-item.scss
+++ b/packages/core/src/components/group-item/group-item.scss
@@ -20,6 +20,7 @@ $focusBorderWidth: 1px;
   display: flex;
   min-height: 2.25rem;
   height: 2.25rem;
+  cursor: pointer;
 
   > button {
     display: flex;
@@ -32,6 +33,7 @@ $focusBorderWidth: 1px;
     background-color: var(--theme-group-item--background);
     border: 1px solid transparent;
     color: var(--theme-color-std-text);
+    cursor: inherit;
 
     padding-left: 2.5rem;
 
