refactor(core/category-filter): review comments

--- a/packages/core/src/components/select/select.scss
+++ b/packages/core/src/components/select/select.scss
@@ -80,7 +80,7 @@
       var(--theme-color-weak-bdr);
 
     input {
-      color: var(--theme-color-weak-text, rgba(255, 255, 255, 0.45));
+      color: var(--theme-color-weak-text);
     }
   }
 
