feat(core): replace with ix-icons v3

--- a/packages/angular-test-app/src/app/app.component.html
+++ b/packages/angular-test-app/src/app/app.component.html
@@ -4,4 +4,5 @@ SPDX-FileCopyrightText: 2024 Siemens AG
 SPDX-License-Identifier: MIT
 -->
 
+<ix-icon name="star"></ix-icon>
 <router-outlet></router-outlet>
